--- a/compose.yaml
+++ b/compose.yaml
@@ -8,10 +8,10 @@ services:
       - "8080:8080" # Map host port 8080 to container port 8080 for Jenkins web interface
       - "50000:50000" # Map host port 50000 to container port 50000 for Jenkins agent communication
     volumes:
-      - jenkins_home:/var/jenkins_home # Persist Jenkins data in a Docker volume
+      - jenkins:/var/jenkins # Persist Jenkins data in a Docker volume
       - /var/run/docker.sock:/var/run/docker.sock # Allow Jenkins to communicate with the Docker daemon
-    environment:
-      - JAVA_OPTS=-Djenkins.install.runSetupWizard=false # Disable Jenkins setup wizard
+    # environment:
+    #   - JAVA_OPTS=-Djenkins.install.runSetupWizard=false # Disable Jenkins setup wizard
 
 volumes:
-  jenkins_home:
+  jenkins:
